--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
                 </div>
 
                 <div class="row">
-                    <span>2</span>
-                    <span>0</span>
-                    <span>-</span>
-                    <span>1</span>
-                    <span>0</span>
+                    <p id="time"></p>
+                    <script>
+                        const d = new Date();
+                        document.getElementById("demo").innerHTML = d;
+                    </script>
                 </div>
             </div>
         </div>
