--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <p id="time"></p>
                     <script>
                         const d = new Date();
-                        document.getElementById("demo").innerHTML = d;
+                        document.getElementById("time").innerHTML = d;
                     </script>
                 </div>
             </div>
